--- a/styles.css
+++ b/styles.css
@@ -62,6 +62,7 @@ h1{
     border-radius: 25px;
     transition: transform 0.5s;
     transform-style: preserve-3d;
+    margin-bottom: 30px;
 }
 
 .FlashCard .Front{
@@ -93,4 +94,21 @@ h1{
 
 .FlashCard:active {
     transform: rotatex(180deg);
+}
+
+#Interact{
+    background-color: green;
+    border: none;
+    color: rgb(255, 255, 255);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    margin-bottom: 5px;
+    border-radius: 25px;
+    margin-left: 250px;
+}
+
+#Interact:hover{
+    background-color: rgb(100, 0, 0);
 }
