--- a/styles.css
+++ b/styles.css
@@ -20,26 +20,30 @@ h1{
 
 #buttons:hover{
     background-color: rgb(100, 0, 0);
+    border-right: 4px;
+    border-bottom: 4px;
+    border-top: 4px;
+    border-color: rgb(255, 0, 0);
 }
 
 #buttons{
     background-color: green;
-    border: none;
+    border: 4px;
+    border-style: solid;
+    border-color: green;
     color: rgb(255, 255, 255);
     padding: 15px 32px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin-bottom: 5px;
-    border-radius: 25px;
 }
 
 #sidemenu-div{
+    background-color: green;
     width: 20%;
     float: left;
-    padding-left: 1%;
-    min-height:400px;
+    min-height:800px;
     text-align: center;
     line-height:30px;
     display: flex;
@@ -106,9 +110,39 @@ h1{
     font-size: 16px;
     margin-bottom: 5px;
     border-radius: 25px;
-    margin-left: 250px;
+    display: none;
+    margin-left: 270px;
+    flex-direction: row;
 }
 
 #Interact:hover{
+    background-color: rgb(100, 0, 0);
+}
+
+.FlashCardContainer #Flash{
+    display: none;
+}
+
+#subjects{
+    background-color: green;
+    border: none;
+    color: rgb(255, 255, 255);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: flex;
+    flex-direction: row;
+    font-size: 16px;
+    margin-bottom: 5px;
+    margin-right:20px ;
+    max-width: 250px;
+}
+
+.FlashCardList{
+    display: flex;
+    flex-direction: row;
+}
+
+#subjects:hover{
     background-color: rgb(100, 0, 0);
 }
